# sigviewer

./: .clang-format  .cproject  .cvsignore  .gitignore  .hgignore  .project  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Changelog.txt  Doxyfile  Makefile  README  README.md  build-deb.sh  build-src-zip.sh  changelog.txt  create-src.sh  download_deps.cmake  loadXDF.cpp  sigviewer.nsi  sigviewer.pro  update_translations.sh  xdf_reader.cpp
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml  linux.yml  macos.yml  release.yml  test.yml  windows.yml
cmake/: FindLibBiosig.cmake  download_deps.cmake
deb_building_stuff/: deb_control_template  sigviewer.desktop
deploy/debian/: build-deb.sh  deb_control_template  sigviewer.desktop
deploy/windows/: README  README.md  sigviewer-windows.iss  startmenu.pro
doc/: Makefile  make.bat
doc/source/: conf.py  index.rst  introduction.rst  using.rst  using_adapting_signal_view.rst  using_editing_events.rst  using_open_files.rst
src/: Info.plist  Makefile  Makefile.Debug  Makefile.Release  abstract_browser_model.h  application_context.cpp  application_context.h  application_context_impl.cpp  application_context_impl.h  application_context_impl_interface.h  basic_header_info_dialog.cpp  basic_header_info_dialog.h  channel_selection_dialog.cpp  channel_selection_dialog.h  channel_separator_canvas_item.cpp  channel_separator_canvas_item.h  color_settings.xml  command_executer.h  command_stack.cpp  command_stack.h  copy_event_dialog.cpp  copy_event_dialog.h  event_canvas_item.cpp  event_canvas_item.h  event_color_manager.cpp  event_color_manager.h  event_table_dialog.cpp  event_table_dialog.h  event_time_selection_dialog.cpp  event_time_selection_dialog.h  event_type_dialog.cpp  event_type_dialog.h  eventcodes.txt  file_context.cpp  file_context.h  fit_view_to_event_view_undo_command.cpp  fit_view_to_event_view_undo_command.h  go_to_dialog.cpp  go_to_dialog.h  gui_action_manager.cpp  (+45 more)
src/base/: application_states.h  base.pri  basic_header.cpp  basic_header.h  biosig_reader.cpp  biosig_reader.h  biosig_writer.cpp  biosig_writer.h  data_block.cpp  data_block.h  event_manager.cpp  event_manager.h  event_table_file_reader.cpp  event_table_file_reader.h  evt_writer.cpp  evt_writer.h  exception.cpp  exception.h  file_signal_reader.h  file_signal_reader_factory.cpp  file_signal_reader_factory.h  file_signal_writer.h  file_signal_writer_factory.cpp  file_signal_writer_factory.h  file_states.h  filter.h  fixed_data_block.cpp  fixed_data_block.h  gdf_event.cpp  gdf_event.h  math_utils.cpp  math_utils.h  prototype_factory.h  signal_buffer.cpp  signal_buffer.h  signal_channel.cpp  signal_channel.h  signal_data_block.cpp  signal_data_block.h  signal_data_block_queue.cpp  (+9 more)
src/block_visualisation/: block_graphics_item.cpp  block_graphics_item.h  block_visualisation.pri  block_visualisation_item_model.cpp  block_visualisation_item_model.h  block_visualisation_item_view.cpp  block_visualisation_item_view.h  blocks_visualisation_model.cpp  blocks_visualisation_model.h  blocks_visualisation_view.cpp  blocks_visualisation_view.h
src/commands/: commands.pri  convert_file_command.cpp  convert_file_command.h  open_file_command.cpp  open_file_command.h
src/editing_commands/: change_channel_undo_command.cpp  change_channel_undo_command.h  change_type_undo_command.cpp  change_type_undo_command.h  delete_event_undo_command.cpp  delete_event_undo_command.h  editing_commands.pri  macro_undo_command.cpp  macro_undo_command.h  new_event_undo_command.cpp  new_event_undo_command.h  resize_event_undo_command.cpp  resize_event_undo_command.h
src/file_handling/: basic_header.cpp  basic_header.h  biosig_basic_header.cpp  biosig_basic_header.h  biosig_reader.cpp  biosig_reader.h  biosig_writer.cpp  biosig_writer.h  channel_manager.cpp  channel_manager.h  channel_manager_proxy.cpp  channel_manager_proxy.h  detrend_channel_manager.cpp  detrend_channel_manager.h  down_sampling_thread.cpp  down_sampling_thread.h  downsampling_thread.cpp  downsampling_thread.h  event_manager.cpp  event_manager.h  event_table_file_reader.cpp  event_table_file_reader.h  evt_writer.cpp  evt_writer.h  file_channel_manager.cpp  file_channel_manager.h  file_handler_factory.h  file_handler_factory_registrator.h  file_handling.pri  file_signal_reader.cpp  file_signal_reader.h  file_signal_reader_factory.cpp  file_signal_reader_factory.h  file_signal_writer.cpp  file_signal_writer.h  file_signal_writer_factory.cpp  file_signal_writer_factory.h  gzip_decompressor.cpp  gzip_decompressor.h  signal_cache.h  (+2 more)
src/file_handling_impl/: biosig_basic_header.cpp  biosig_basic_header.h  biosig_reader.cpp  biosig_reader.h  biosig_writer.cpp  biosig_writer.h  channel_manager_impl.cpp  channel_manager_impl.h  down_sampling_thread.cpp  down_sampling_thread.h  event_manager_impl.cpp  event_manager_impl.h  event_table_file_reader.cpp  event_table_file_reader.h  evt_writer.cpp  evt_writer.h  file_handler_factory_registrator.h  file_handling_impl.pri  gdf_basic_header.cpp  gdf_event.h  gdf_file_signal_reader.cpp  gdf_file_signal_reader.h  gdf_file_signal_writer.cpp  gdf_file_signal_writer.h  gdf_writer.cpp  gdf_writer.h  init_file_handling_impl.h  loadxdf.cpp  loadxdf.h  multi_stage.c  polyfilt.c  remez_lp.c  resampling.cpp  resampling.h  resampling.ui  signal_cache.h  sinus_dummy_header.cpp  sinus_dummy_header.h  sinus_dummy_reader.cpp  sinus_dummy_reader.h  (+8 more)
src/gui/: application_context.h  background_processes.cpp  background_processes.h  color_manager.cpp  color_manager.h  event_table.h  event_view.h  gui.pri  gui_action_command.cpp  gui_action_command.h  gui_action_factory.cpp  gui_action_factory.h  gui_action_factory_registrator.h  gui_helper_functions.cpp  gui_helper_functions.h  main_window.cpp  main_window.h  main_window_model.cpp  main_window_model.h  processed_signal_channel_manager.cpp  processed_signal_channel_manager.h  progress_bar.h  select_shown_channels_dialog.cpp  select_shown_channels_dialog.h  signal_browser_mouse_handling.cpp  (+7 more)
testframework/: main.cpp  testframework.pro
(+422 files in other folders)
